@@ -1,6 +1,8 @@
 unreleased changes
 ==================
 
+- added support for specifying typed factory component selectors on a per-factory basis
+
 - added support for using services as mixins
 
 - added autogenerated delegate-based factories. Taking dependency on Func<IFoo> and calling the delegate will return IFoo from the container
